log
Thu 16 Mar 2023 03:52:55 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
ee22e98
Thu 16 Mar 2023 04:03:11 PM UTC: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  1|6
total_score: 10/70
6785365
Thu 16 Mar 2023 04:09:05 PM UTC: 
 exercises.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  2|5
total_score: 20/70
46e68fa
Thu 16 Mar 2023 04:13:57 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:65:11: error: passing argument 1 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   strcpy(p->edad, edad);
      |          ~^~~~~~
      |           |
      |           int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:27,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: expected ‘char * restrict’ but argument is of type ‘int’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
In file included from test.c:5:
exercises.c:65:19: error: passing argument 2 of ‘strcpy’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |   strcpy(p->edad, edad);
      |                   ^~~~
      |                   |
      |                   int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/features.h:490,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/libc-header-start.h:33,
                 from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:27,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/string_fortified.h:77:1: note: expected ‘const char * restrict’ but argument is of type ‘int’
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
cc1: all warnings being treated as errors
Compilation failed
badd7e4
Thu 16 Mar 2023 04:14:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
a313a8c
Thu 16 Mar 2023 04:20:40 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:83:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   83 |   vector *v == NULL;
      |   ^~~~~~
      |   Vector
exercises.c:83:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
   83 |   vector *v == NULL;
      |             ^~
exercises.c:85:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   85 |   vector *V == (*int) calloc(n, sizeof(int));
      |   ^~~~~~
      |   Vector
exercises.c:85:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
   85 |   vector *V == (*int) calloc(n, sizeof(int));
      |             ^~
Compilation failed
f71da3d
